@@ -216,7 +216,7 @@ typedef DWORD FLONG;
 #define INHERIT_ONLY_ACE	8
 #define INHERITED_ACE	16
 #define VALID_INHERIT_FLAGS \
-	| OBJECT_INHERIT_ACE \
+	OBJECT_INHERIT_ACE \
 	| CONTAINER_INHERIT_ACE \
 	| NO_PROPAGATE_INHERIT_ACE \
 	| INHERIT_ONLY_ACE \
@@ -992,7 +992,7 @@ typedef DWORD FLONG;
 #define HEAP_MAXIMUM_TAG 0xFFF
 #define HEAP_PSEUDO_TAG_FLAG 0x8000
 #define HEAP_TAG_SHIFT 16
-#define HEAP_MAKE_TAG_FLAGS(b,o) ((DWORD)((b)+(o)<<16)))
+#define HEAP_MAKE_TAG_FLAGS(b,o) ((DWORD)((b)+(o)<<16))
 #define KEY_QUERY_VALUE 1
 #define KEY_SET_VALUE 2
 #define KEY_CREATE_SUB_KEY 4
